<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->
<resources>

	<string name="app_name">骑闯天路</string>
	<string name="font_path">fonts/trebucbd.ttf</string>
	<string name="normal_font_path">fonts/trebuc.ttf</string>

	<string name="ok">OK</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="cancel">Cancel</string>

	<string name="action_about">About</string>
	<string name="action_settings">Settings</string>
	<string name="action_connect">连接</string>
	<string name="action_select">SELECT DEVICE</string>
	<string name="action_connecting">正在连接…</string>
	<string name="action_disconnect">断开</string>

	<string name="label_user">选手编号</string>
	<string name="label_token">密码</string>
	<string name="label_power">技术支持：</string>
	<string name="label_bluemix">IBM Bluemix</string>
	<string name="label_cloudant">IBM Cloudant</string>
	<string name="label_cctv">央视网</string>
	<string name="label_qiwu">武汉齐物科技</string>

	<string name="label_status">连接状态：</string>
	<string name="label_sensor">码表</string>
	<string name="label_server">服务器</string>

	<string name="status_connected">已连接</string>
	<string name="status_disconnected">已断开</string>
	<string name="status_disconnecting">正在断开</string>
	<string name="status_linkloss">连接丢失</string>
	<string name="status_ready">已就绪</string>
	<string name="status_bondrequired">请求绑定</string>
	<string name="status_bonded">已绑定</string>
	<string name="status_notsupport">不支持</string>
	<string name="status_unknown">未知</string>

	<string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>
	<string name="drawer_plugins">PLUGINS</string>
	<string name="drawer_plugin_nrf_connect">nRF Connect</string>

	<string name="battery">%d%%</string>
	<string name="not_available">n/a</string>
	<string name="not_available_value">" - "</string>
	<string name="no_ble">Device doesn\'t have BLE support!</string>
	<string name="no_apps">No profiles found.</string>
	<string name="not_supported">The device does not have required services.</string>
	<string name="no_application">Web Browser application is not available.</string>
	<string name="no_application_play">Google Play not installed.</string>
	<string name="no_required_permission">Permission denied.</string>
	<string name="scanner_title">请选择设备:</string>
	<string name="scanner_empty">没有发现设备</string>
	<string name="scanner_action_scan">扫描</string>
	<string name="scanner_action_cancel">取消</string>
	<string name="scanner_subtitle_bonded">已绑定设备:</string>
	<string name="scanner_subtitle_not_bonded">可用设备:</string>
	<string name="scanner_permission_rationale">Since Android 6.0 Marshmallow system requires granting access to device\'s location in order to scan for Bluetooth Smart devices. Bluetooth beacons may be used to determine the phone\'s and user\'s location.</string>

	<string name="log" formatted="false">%1$tR:%1$tS.%1$tL</string>

	<string name="permission_title">Permission required</string>
	<string name="permission_sd_text">nRF Toolbox would like to copy some sample applications, that may be uploaded onto your nRF51 device using the DFU (Device Firmware Update), to the memory of this device. If you agree, you will be asked to give the application permission to access files on your device.</string>
	<string name="about_title">About</string>
	<string name="about_version">\n\nVersion: %s</string>
	<string name="about_text">The nRF Toolbox is a container application that stores your Nordic Semiconductor apps in one location.</string>

</resources>
