<!--
  ~ Copyright (c) 2015, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/headerTextColor"
	android:stretchColumns="1"
	android:orientation="vertical">

	<!-- The size of text below must be fixed, therefore dp are used instead of sp -->

	<TableRow>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_user"

			android:gravity="left"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin" />

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text=""
			android:id="@+id/value_user"
			android:gravity="left"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin" />

	</TableRow>

	<TableRow>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_token"
			android:gravity="left"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin" />

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text=""
			android:id="@+id/value_token"
			android:gravity="left"
			android:inputType="textPassword"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin" />
	</TableRow>

	<TableRow>
		<Button
			android:id="@+id/action_connect"
			style="@style/Widget.Connect"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:onClick="onConnectClicked"
			android:text="@string/action_connect"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:layout_below="@+id/device_name"
			android:layout_span="2"
			android:layout_centerHorizontal="true" />
	</TableRow>

	<TableRow>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_status"
			android:gravity="left"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"/>

	</TableRow>

	<TableRow>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_sensor"

			android:gravity="left"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text=""
			android:id="@+id/status_sensor"
			android:gravity="left"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin" />

	</TableRow>

	<TableRow>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_server"

			android:gravity="left"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text=""
			android:id="@+id/status_server"
			android:gravity="left"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin" />

	</TableRow>

	<TableRow>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_power"
			android:gravity="left"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"/>

	</TableRow>

	<TableRow>
		<ImageView
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:src="@drawable/cntv"
			android:layout_gravity="center"
			android:paddingLeft="5dp"
			android:adjustViewBounds="false" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_cctv"
			android:gravity="left"
			android:textStyle="bold"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"/>
	</TableRow>

	<TableRow>
			<ImageView
				android:layout_width="40dp"
				android:layout_height="40dp"
				android:src="@drawable/bluemix"
				android:layout_gravity="center"
				android:adjustViewBounds="false" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_bluemix"
				android:gravity="left"
				android:textStyle="bold"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"/>
	</TableRow>

	<TableRow>
			<ImageView
				android:layout_width="40dp"
				android:layout_height="40dp"
				android:layout_gravity="center"
				android:src="@drawable/cloudant_logo"
				android:adjustViewBounds="false" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_cloudant"
				android:gravity="left"
				android:textStyle="bold"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"/>

	</TableRow>

	<TableRow>
		<ImageView
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:layout_gravity="center"
			android:paddingLeft="5dp"
			android:src="@drawable/gpsport"
			android:adjustViewBounds="false" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_qiwu"
			android:gravity="left"
			android:textStyle="bold"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"/>

	</TableRow>


</TableLayout>